# 3t-bot

./: .copier-answers.yml  .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: run_bot.yml
src/: book_class.py  credentials.py  main.py  send_mail.py
